iPad horizontal overflow fix

--- a/css/index.css
+++ b/css/index.css
@@ -95,6 +95,12 @@
   }
 }*/
 
+@media only screen and (max-width: 1081px) {
+  .home-content-container {
+    overflow: hidden;
+  }
+}
+
 @media only screen and (max-width: 960px) {
   .home-content-container {
     flex-direction: column;
